failed creating test cluster

--- a/ci/prow/templates/prow_config_header.yaml
+++ b/ci/prow/templates/prow_config_header.yaml
@@ -66,6 +66,8 @@ deck:
           - 'FAIL:'
           # boskos error
           - 'boskos failed to acquire project'
+          # cluster creation error
+          - 'failed creating test cluster'
       required_files:
       - build-log.txt
     - lens:
