--- a/ci/prow/config.yaml
+++ b/ci/prow/config.yaml
@@ -53,9 +53,8 @@ deck:
         name: buildlog
         config:
           highlight_regexes:
-          # regexes to match generic errors
-          - timed out
-          # regexes to match specific errors we can have
+          # timed out error in waiting for Kubernetes resources
+          - 'timed out waiting for the condition'
           # go test timeout
           - 'panic: test timed out after.*$'
           # test case failure
