Use prow-tests image with go1.13 for all eventing repos, so that we can migrate pkg to go1.13 as well

--- a/ci/prow/config_knative.yaml
+++ b/ci/prow/config_knative.yaml
@@ -101,6 +101,11 @@ presubmits:
       legacy-branches:
       - release-0.7
       - release-0.8
+      go112-branches:
+      - release-0.7
+      - release-0.8
+      - release-0.9
+      - release-0.10
     - build-tests: true
       resources:
         requests:
@@ -116,6 +121,11 @@ presubmits:
       legacy-branches:
       - release-0.7
       - release-0.8
+      go112-branches:
+      - release-0.7
+      - release-0.8
+      - release-0.9
+      - release-0.10
     - build-tests: true
       resources:
         requests:
@@ -127,6 +137,12 @@ presubmits:
     - go-coverage: true
 
   knative/docs:
+    - repo-settings:
+      go112-branches:
+      - release-0.7
+      - release-0.8
+      - release-0.9
+      - release-0.10
     - build-tests: true
     - unit-tests: true
     - integration-tests: true
@@ -180,6 +196,10 @@ presubmits:
   google/knative-gcp:
     - repo-settings:
       performance: true
+      go112-branches:
+      - release-0.8
+      - release-0.9
+      - release-0.10
     - build-tests: true
     - unit-tests: true
     - integration-tests: true
@@ -206,6 +226,10 @@ presubmits:
       dot-dev: true
 
   knative/eventing-operator:
+    - repo-settings:
+      go112-branches:
+      - release-0.9
+      - release-0.10
     - build-tests: true
       dot-dev: true
     - unit-tests: true
