--- a/ci/prow/testgrid.yaml
+++ b/ci/prow/testgrid.yaml
@@ -80,6 +80,10 @@ test_groups:
   gcs_prefix: knative-prow/logs/ci-knative-serving-gloo-0.17.1
   alert_stale_results_hours: 3
   num_failures_to_alert: 3
+- name: ci-knative-serving-kourier-stable
+  gcs_prefix: knative-prow/logs/ci-knative-serving-kourier-stable
+  alert_stale_results_hours: 3
+  num_failures_to_alert: 3
 - name: ci-knative-serving-nightly-release
   gcs_prefix: knative-prow/logs/ci-knative-serving-nightly-release
 - name: ci-knative-serving-dot-release
@@ -287,6 +291,9 @@ dashboards:
     base_options: "sort-by-name="
   - name: gloo-0.17.1
     test_group_name: ci-knative-serving-gloo-0.17.1
+    base_options: "sort-by-name="
+  - name: kourier-stable
+    test_group_name: ci-knative-serving-kourier-stable
     base_options: "sort-by-name="
   - name: nightly
     test_group_name: ci-knative-serving-nightly-release
