--- a/ci/prow/config_knative.yaml
+++ b/ci/prow/config_knative.yaml
@@ -165,26 +165,10 @@ presubmits:
         - "./test/presubmit-link-check.sh"
 
   knative/pkg:
-    - build-tests: true
-      dot-dev: true
-    - unit-tests: true
-      dot-dev: true
-    - integration-tests: true
-      dot-dev: true
-    - go-coverage: true
-      dot-dev: true
-
-  knative/test-infra:
-    - build-tests: true
-      dot-dev: true
-    - unit-tests: true
-      dot-dev: true
-    - integration-tests: true
-      dot-dev: true
-
-  knative/caching:
     - repo-settings:
       go112-branches:
+      - release-0.7
+      - release-0.8
       - release-0.9
       - release-0.10
     - build-tests: true
@@ -196,18 +180,51 @@ presubmits:
     - go-coverage: true
       dot-dev: true
 
+  knative/test-infra:
+    - repo-settings:
+      go112-branches:
+      - release-0.10
+    - build-tests: true
+      dot-dev: true
+    - unit-tests: true
+      dot-dev: true
+    - integration-tests: true
+      dot-dev: true
+
+  knative/caching:
+    - repo-settings:
+      go112-branches:
+      - release-0.10
+    - build-tests: true
+      dot-dev: true
+    - unit-tests: true
+      dot-dev: true
+    - integration-tests: true
+      dot-dev: true
+    - go-coverage: true
+      dot-dev: true
+
   knative/observability:
+    - repo-settings:
+      go112-branches:
+      - release-0.10
     - build-tests: true
     - unit-tests: true
     - integration-tests: true
 
   knative/sample-controller:
+    - repo-settings:
+      go112-branches:
+      - release-0.10
     - build-tests: true
       dot-dev: true
     - unit-tests: true
       dot-dev: true
 
   knative/sample-source:
+    - repo-settings:
+      go112-branches:
+      - release-0.10
     - build-tests: true
       dot-dev: true
     - unit-tests: true
@@ -248,7 +265,6 @@ presubmits:
   knative/eventing-operator:
     - repo-settings:
       go112-branches:
-      - release-0.9
       - release-0.10
     - build-tests: true
       dot-dev: true
@@ -358,12 +374,16 @@ periodics:
   knative/client:
     - continuous: true
       dot-dev: true
+      go113: true
     - nightly: true
       dot-dev: true
+      go113: true
     - dot-release: true
       dot-dev: true
+      go113: true
     - auto-release: true
       dot-dev: true
+      go113: true
 
   knative/docs:
     - continuous: true
@@ -373,6 +393,7 @@ periodics:
     - continuous: true
       timeout: 90
       dot-dev: true
+      go113: true
       resources:
         requests:
           memory: 12Gi
@@ -390,6 +411,7 @@ periodics:
       dot-dev: true
     - nightly: true
       dot-dev: true
+      go113: true
       resources:
         requests:
           memory: 12Gi
@@ -397,6 +419,7 @@ periodics:
           memory: 16Gi
     - dot-release: true
       dot-dev: true
+      go113: true
       resources:
         requests:
           memory: 12Gi
@@ -404,6 +427,7 @@ periodics:
           memory: 16Gi
     - auto-release: true
       dot-dev: true
+      go113: true
       resources:
         requests:
           memory: 12Gi
@@ -413,6 +437,7 @@ periodics:
   knative/eventing-contrib:
     - continuous: true
       dot-dev: true
+      go113: true
       resources:
         requests:
           memory: 12Gi
@@ -430,6 +455,7 @@ periodics:
       dot-dev: true
     - nightly: true
       dot-dev: true
+      go113: true
       resources:
         requests:
           memory: 12Gi
@@ -437,6 +463,7 @@ periodics:
           memory: 16Gi
     - dot-release: true
       dot-dev: true
+      go113: true
       resources:
         requests:
           memory: 12Gi
@@ -444,6 +471,7 @@ periodics:
           memory: 16Gi
     - auto-release: true
       dot-dev: true
+      go113: true
       resources:
         requests:
           memory: 12Gi
@@ -453,25 +481,31 @@ periodics:
   knative/pkg:
     - continuous: true
       dot-dev: true
+      go113: true
 
   knative/caching:
     - continuous: true
       dot-dev: true
+      go113: true
 
   knative/observability:
     - continuous: true
+      go113: true
 
   knative/sample-controller:
     - continuous: true
       dot-dev: true
+      go113: true
 
   knative/sample-source:
     - continuous: true
       dot-dev: true
+      go113: true
 
   knative/test-infra:
     - continuous: true
       dot-dev: true
+      go113: true
 
   knative/serving-operator:
     - continuous: true
@@ -481,9 +515,8 @@ periodics:
       dot-dev: true
       go113: true
     - dot-release: true
-      # TODO(chaodaiG): dot-release will need to use go1.13 after branch
-      # release-0.10 is cut
       dot-dev: true
+      go113: true
     - auto-release: true
       dot-dev: true
       go113: true
@@ -495,22 +528,31 @@ periodics:
   knative/eventing-operator:
     - continuous: true
       dot-dev: true
+      go113: true
     - nightly: true
       dot-dev: true
+      go113: true
     - dot-release: true
       dot-dev: true
+      go113: true
     - auto-release: true
       dot-dev: true
+      go113: true
     - custom-job: integration-tests-on-latest-eventing
       command: "./test/e2e-tests-latest-eventing.sh"
       dot-dev: true
+      go113: true
 
   google/knative-gcp:
     - continuous: true
+      go113: true
     - nightly: true
+      go113: true
     - dot-release: true
+      go113: true
       env-vars:
       - ORG_NAME=google
     - auto-release: true
+      go113: true
       env-vars:
       - ORG_NAME=google
