--- a/ci/prow/config.yaml
+++ b/ci/prow/config.yaml
@@ -8690,6 +8690,111 @@ periodics:
     - name: housekeeping-github-token
       secret:
         secretName: housekeeping-github-token
+- cron: "0 */12 * * *"
+  name: ci-knative-serving-issue-tracker-stale
+  agent: kubernetes
+  decorate: true
+  extra_refs:
+  - org: knative
+    repo: test-infra
+    base_ref: master
+  spec:
+    containers:
+    - image: gcr.io/k8s-prow/commenter:v20190731-e3f7b9853
+      imagePullPolicy: Always
+      command:
+      - "/app/robots/commenter/app.binary"
+      args:
+      - "--query=repo:knative/serving
+        is:issue
+        is:open
+        -label:lifecycle/frozen
+        -label:lifecycle/stale
+        -label:lifecycle/rotten"
+      - "--updated=2160h"
+      - "--token=/etc/housekeeping-github-token/token"
+      - "--comment=Issues go stale after 90 days of inactivity.\nMark the issue as fresh by adding the comment `/remove-lifecycle stale`.\nStale issues rot after an additional 30 days of inactivity and eventually close.\nIf this issue is safe to close now please do so by adding the comment `/close`.\n\nSend feedback to [Knative Productivity Slack channel](https://knative.slack.com/messages/CCSNR4FCH) or file an issue in [knative/test-infra](https://github.com/knative/test-infra/issues/new).\n\n/lifecycle stale"
+      - "--template"
+      - "--ceiling=10"
+      - "--confirm"
+      volumeMounts:
+      - name: housekeeping-github-token
+        mountPath: /etc/housekeeping-github-token
+        readOnly: true
+    volumes:
+    - name: housekeeping-github-token
+      secret:
+        secretName: housekeeping-github-token
+- cron: "0 */12 * * *"
+  name: ci-knative-serving-issue-tracker-rotten
+  agent: kubernetes
+  decorate: true
+  extra_refs:
+  - org: knative
+    repo: test-infra
+    base_ref: master
+  spec:
+    containers:
+    - image: gcr.io/k8s-prow/commenter:v20190731-e3f7b9853
+      imagePullPolicy: Always
+      command:
+      - "/app/robots/commenter/app.binary"
+      args:
+      - "--query=repo:knative/serving
+        is:issue
+        is:open
+        -label:lifecycle/frozen
+        label:lifecycle/stale
+        -label:lifecycle/rotten"
+      - "--updated=720h"
+      - "--token=/etc/housekeeping-github-token/token"
+      - "--comment=Stale issues rot after 30 days of inactivity.\nMark the issue as fresh by adding the comment `/remove-lifecycle rotten`.\nRotten issues close after an additional 30 days of inactivity.\nIf this issue is safe to close now please do so by adding the comment `/close`.\n\nSend feedback to [Knative Productivity Slack channel](https://knative.slack.com/messages/CCSNR4FCH) or file an issue in [knative/test-infra](https://github.com/knative/test-infra/issues/new).\n\n/lifecycle rotten"
+      - "--template"
+      - "--ceiling=10"
+      - "--confirm"
+      volumeMounts:
+      - name: housekeeping-github-token
+        mountPath: /etc/housekeeping-github-token
+        readOnly: true
+    volumes:
+    - name: housekeeping-github-token
+      secret:
+        secretName: housekeeping-github-token
+- cron: "0 */12 * * *"
+  name: ci-knative-serving-issue-tracker-close
+  agent: kubernetes
+  decorate: true
+  extra_refs:
+  - org: knative
+    repo: test-infra
+    base_ref: master
+  spec:
+    containers:
+    - image: gcr.io/k8s-prow/commenter:v20190731-e3f7b9853
+      imagePullPolicy: Always
+      command:
+      - "/app/robots/commenter/app.binary"
+      args:
+      - "--query=repo:knative/serving
+        is:issue
+        is:open
+        -label:lifecycle/frozen
+        -label:lifecycle/stale
+        label:lifecycle/rotten"
+      - "--updated=720h"
+      - "--token=/etc/housekeeping-github-token/token"
+      - "--comment=Rotten issues close after 30 days of inactivity.\nReopen the issue with `/reopen`.\nMark the issue as fresh by adding the comment `/remove-lifecycle rotten`.\n\nSend feedback to [Knative Productivity Slack channel](https://knative.slack.com/messages/CCSNR4FCH) or file an issue in [knative/test-infra](https://github.com/knative/test-infra/issues/new).\n\n/close"
+      - "--template"
+      - "--ceiling=10"
+      - "--confirm"
+      volumeMounts:
+      - name: housekeeping-github-token
+        mountPath: /etc/housekeeping-github-token
+        readOnly: true
+    volumes:
+    - name: housekeeping-github-token
+      secret:
+        secretName: housekeeping-github-token
 - cron: "30 07 * * *"
   name: ci-knative-serving-recreate-clusters
   agent: kubernetes
